--- a/src/serial/PopsUI.glade
+++ b/src/serial/PopsUI.glade
@@ -1,74 +1,74 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.36.0 -->
+<!-- Generated with glade 3.38.2 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkAdjustment" id="LagAd1">
     <property name="lower">-5</property>
     <property name="upper">5</property>
-    <property name="step_increment">0.1</property>
-    <property name="page_increment">10</property>
+    <property name="step-increment">0.10</property>
+    <property name="page-increment">10</property>
   </object>
   <object class="GtkAdjustment" id="LagAd2">
     <property name="lower">-5</property>
     <property name="upper">5</property>
-    <property name="step_increment">0.1</property>
-    <property name="page_increment">10</property>
+    <property name="step-increment">0.10</property>
+    <property name="page-increment">10</property>
   </object>
   <object class="GtkAdjustment" id="LagAd3">
     <property name="lower">-5</property>
     <property name="upper">5</property>
-    <property name="step_increment">0.1</property>
-    <property name="page_increment">10</property>
+    <property name="step-increment">0.10</property>
+    <property name="page-increment">10</property>
   </object>
   <object class="GtkAdjustment" id="LagAd4">
     <property name="lower">-5</property>
     <property name="upper">5</property>
-    <property name="step_increment">0.1</property>
-    <property name="page_increment">10</property>
+    <property name="step-increment">0.10</property>
+    <property name="page-increment">10</property>
   </object>
   <object class="GtkAdjustment" id="LagAd5">
     <property name="lower">-5</property>
     <property name="upper">5</property>
-    <property name="step_increment">0.1</property>
-    <property name="page_increment">10</property>
+    <property name="step-increment">0.10</property>
+    <property name="page-increment">10</property>
   </object>
   <object class="GtkAdjustment" id="hkMax">
     <property name="upper">5</property>
     <property name="value">5</property>
-    <property name="step_increment">0.1</property>
-    <property name="page_increment">0.1</property>
+    <property name="step-increment">0.10</property>
+    <property name="page-increment">0.10</property>
   </object>
   <object class="GtkAdjustment" id="hkMin">
     <property name="upper">5</property>
-    <property name="step_increment">1</property>
-    <property name="page_increment">10</property>
+    <property name="step-increment">1</property>
+    <property name="page-increment">10</property>
   </object>
   <object class="GtkAdjustment" id="hkScans1">
     <property name="upper">10</property>
-    <property name="step_increment">1</property>
-    <property name="page_increment">10</property>
+    <property name="step-increment">1</property>
+    <property name="page-increment">10</property>
   </object>
   <object class="GtkAdjustment" id="hkScans2">
     <property name="upper">10</property>
-    <property name="step_increment">1</property>
-    <property name="page_increment">10</property>
+    <property name="step-increment">1</property>
+    <property name="page-increment">10</property>
   </object>
   <object class="GtkWindow" id="mainWindow">
-    <property name="can_focus">False</property>
-    <property name="window_position">center</property>
-    <property name="default_width">-1</property>
-    <property name="default_height">-1</property>
+    <property name="can-focus">False</property>
+    <property name="window-position">center</property>
+    <property name="default-width">-1</property>
+    <property name="default-height">-1</property>
     <property name="gravity">center</property>
     <child>
       <object class="GtkFixed" id="POPS UI">
         <property name="visible">True</property>
-        <property name="can_focus">False</property>
+        <property name="can-focus">False</property>
         <child>
           <object class="GtkBox" id="xpxp1">
-            <property name="width_request">950</property>
-            <property name="height_request">400</property>
+            <property name="width-request">950</property>
+            <property name="height-request">300</property>
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="orientation">vertical</property>
             <child>
               <placeholder/>
@@ -81,7 +81,7 @@
         <child>
           <object class="GtkEntry" id="xpxp1FieldG1">
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
+            <property name="can-focus">True</property>
             <property name="editable">False</property>
           </object>
           <packing>
@@ -91,11 +91,11 @@
         </child>
         <child>
           <object class="GtkComboBoxText" id="xpxp1G1">
-            <property name="width_request">210</property>
+            <property name="width-request">210</property>
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="active">0</property>
-            <property name="active_id">wpwp</property>
+            <property name="active-id">wpwp</property>
             <items>
               <item id="number" translatable="yes">Number (cm-3)</item>
               <item id="area" translatable="yes">Area (mum3 cm-3)</item>
@@ -109,50 +109,50 @@
         </child>
         <child>
           <object class="GtkBox" id="xpxp2">
-            <property name="width_request">950</property>
-            <property name="height_request">400</property>
+            <property name="width-request">950</property>
+            <property name="height-request">300</property>
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="orientation">vertical</property>
             <child>
               <placeholder/>
             </child>
           </object>
           <packing>
-            <property name="y">510</property>
+            <property name="y">410</property>
           </packing>
         </child>
         <child>
           <object class="GtkEntry" id="xpxp2FieldG1">
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
+            <property name="can-focus">True</property>
             <property name="editable">False</property>
           </object>
           <packing>
             <property name="x">240</property>
-            <property name="y">470</property>
+            <property name="y">370</property>
           </packing>
         </child>
         <child>
           <object class="GtkComboBoxText" id="xpxp2G1">
-            <property name="width_request">210</property>
+            <property name="width-request">210</property>
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="active">0</property>
-            <property name="active_id">wpwp</property>
+            <property name="active-id">wpwp</property>
             <items>
               <item id="histogram" translatable="yes">Histogram</item>
             </items>
           </object>
           <packing>
             <property name="x">10</property>
-            <property name="y">470</property>
+            <property name="y">370</property>
           </packing>
         </child>
         <child>
           <object class="GtkEntry" id="POPSSerial">
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
+            <property name="can-focus">True</property>
             <property name="editable">False</property>
           </object>
           <packing>
@@ -163,7 +163,7 @@
         <child>
           <object class="GtkLabel">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="label" translatable="yes">POPS (cm-3)</property>
           </object>
           <packing>
@@ -174,8 +174,8 @@
         <child>
           <object class="GtkLabel">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="label" translatable="yes">1 Hz Data Stream </property>
+            <property name="can-focus">False</property>
+            <property name="label" translatable="yes">POPS Serial Data</property>
             <attributes>
               <attribute name="style" value="normal"/>
               <attribute name="weight" value="bold"/>
@@ -186,42 +186,64 @@
             <property name="y">20</property>
           </packing>
         </child>
+        <child>
+          <object class="GtkEntry" id="POPSFlow">
+            <property name="visible">True</property>
+            <property name="can-focus">True</property>
+            <property name="editable">False</property>
+          </object>
+          <packing>
+            <property name="x">1070</property>
+            <property name="y">100</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkLabel">
+            <property name="visible">True</property>
+            <property name="can-focus">False</property>
+            <property name="label" translatable="yes">Q (cm3 s1-1)</property>
+          </object>
+          <packing>
+            <property name="x">960</property>
+            <property name="y">105</property>
+          </packing>
+        </child>
       </object>
     </child>
     <child type="titlebar">
       <object class="GtkHeaderBar" id="header">
-        <property name="width_request">1270</property>
+        <property name="width-request">1270</property>
         <property name="visible">True</property>
-        <property name="can_focus">False</property>
+        <property name="can-focus">False</property>
         <property name="title" translatable="yes">NC State POPS</property>
         <property name="subtitle" translatable="yes">Data Acquisition and Control System</property>
-        <property name="has_subtitle">False</property>
+        <property name="has-subtitle">False</property>
         <property name="spacing">7</property>
         <child>
           <object class="GtkStackSwitcher" id="SwitchMe">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
           </object>
         </child>
         <child>
           <object class="GtkButton" id="stopButton">
             <property name="label" translatable="yes">Stop DAQ</property>
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">True</property>
+            <property name="can-focus">True</property>
+            <property name="receives-default">True</property>
           </object>
           <packing>
-            <property name="pack_type">end</property>
+            <property name="pack-type">end</property>
             <property name="position">1</property>
           </packing>
         </child>
         <child>
           <object class="GtkEntry" id="Time">
-            <property name="width_request">200</property>
+            <property name="width-request">200</property>
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
+            <property name="can-focus">True</property>
             <property name="editable">False</property>
-            <property name="primary_icon_stock">gtk-info</property>
+            <property name="primary-icon-stock">gtk-info</property>
           </object>
           <packing>
             <property name="position">2</property>
